--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
 			<version>4.1.1</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson 220109 -->
+			<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.8.9</version>
+			</dependency>
+		
+		
 		<!--  coming with Javalin or Postman 211229 -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
